Comment optional step for newer Java version